<resources>
    <string name="app_name">ActoFitAppDemo</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="log_out">Log Out</string>
    <string name="current_location">Current Location</string>
</resources>