<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:text="@string/home_screen"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/current_location"
                    android:textSize="25sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    tools:text="Location" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="100dp"
                    android:background="@color/light_grey"
                    android:text="Location"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="Start Service" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="Stop Service" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="100dp"
                    android:background="@color/light_grey"
                    android:text="@string/log_out"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>
</layout>